# Fable

./: .editorconfig  .fantomasignore  .gitattributes  .gitignore  .gitpod.yml  .markdownlint.json  .markdownlintignore  .npmrc  .travis.yml  AGENTS.md  Build.fsproj  CLAUDE.md  FABLE-BEAM.md  Fabel.sln  Fable.Standalone.sln  Fable.Tests.sln  Fable.sln  INSTALL.md  LICENSE  NuGet.Config  README.md  README_NOTES_CORE.md  RELEASE_NOTES.md  RELEASE_NOTES_COMPILER.md  RELEASE_NOTES_COMPILER_NETCORE.md  RELEASE_NOTES_CORE.md  RELEASE_NOTES_CORE_JS.md  RELEASE_NOTES_JSON_CONVERTER.md  RELEASE_NOTES_LOADER.md  RELEASE_NOTES_ROLLUP.md  RELEASE_NOTES_SPLITTER.md  RELEASE_NOTES_TOOLS.md  RELEASE_NOTES_TOOLS_JS.md  ROADMAP.md  Settings.FSharpLint  TODO.md  Untitled.ipynb  appveyor.yml  before_build.cmd  build copy.fsx  (+26 more)
.claude/: settings.json
.config/: dotnet-tools.json
.devcontainer/: Dockerfile  devcontainer.json  install_dsm.sh
.docker/: Dockerfile
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.husky/: commit-msg  pre-commit  task-runner.json
.paket/: Paket.Restore.targets
LocalPackages/: Buildalyzer.Logger.8.0.0-fable-001.nupkg
build2/: Fun.Build.Extensions.fs  Main.fs  Publish.fs  SimpleExec.Extensions.fs  Utils.fs
content/: custom.css  snippets.css  tips.js
docs/: FAQ.md  README.md  architecture.md  compatibility.html  compatibility.md  compiling.html  compiling.md  docs.fsx  faq.html  faq.md  getting-started.md  getting_started.md  helpers.fs  interacting.html  interacting.md  liquid.fs  numbers.md  plugins.html  plugins.md  prerequisites.md  semantics.md  testing.md  what-is-fable-server.md
lib/: Fabel.Core.fs  (+10 more)
src/fable-library-py/: .flake8  .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/fable-library-py/fable/: Async.fs  Fable.Library.fsproj  Native.fs  Timer.fs  __init__.py  array.py  async_.py  async_builder.py  asyncbuilder.py  asyncio.py  big_int.py  char.py  date.py  decimal.py  int32.py  list.py  long.py  mailbox_processor.py  map_util.py  numeric.py  option.py  reflection.py  reg_exp.py  seq.py.old  string.py  task.py  task_builder.py  time_span.py  types.py  util.py
src/fable-library-py/fable_library/: Array.fs  Async.fs  AsyncBuilder.fs  Fable.Library.Python.fsproj  Fable.Library.fsproj  List.fs  Map.fs  MutableMap.fs  MutableSet.fs  Native.fs  Range.fs  Seq.fs  Set.fs  System.Text.fs  __init__.py  array_.py  async_.py  async_builder.py  bases.py  big_int.py  bit_converter.py  bit_converter_python.py  bitconverter.py  boolean.py  char.py  choice.pyi  curry.py  date.py  date_offset.py  date_only.py  dateoffset.py  decimal.py  decimal_.py  diagnostics.py  directory.py  double.py  encoding.py  event.py  exceptions.py  fable_quotation.py  (+33 more)
src/fable-library-py/fable_library/core/: __init__.py  __init__.pyi  _core.pyi  array.pyi  datetime_offset.pyi  floats.pyi  ints.pyi  option.pyi  strings.pyi  types.pyi
src/fable-library-py/fable_library/v5/: __init__.py
src/fable-library-py/src/: array.rs  datetime_offset.rs  floats.rs  ints.rs  lib.rs  native_array.rs  options.rs  strings.rs  types.rs  util.rs
src/fable-library-py/tests/: test_array.py  test_array_create.py  test_assert.py  test_float_math.py  test_floats.py  test_ints.py  test_types.py  test_union.py
src/fable-library-py/tests-benchmark/: README.md  conftest.py  test_bench_array.py  test_bench_floats.py  test_bench_ints.py
src/fable-library-pyx/: README.md  pyproject.toml
src/fable-library-pyx/fable_library/: Fable.Library.fsproj  async_.py  bit_converter.py  diagnostics.py  event.py  observable.py  path.py  reflection.pxd  reflection.pyx  thread.py  time_span.py  types.py  types.pyx  util.pyx
src/fable-library-rust/: Array.rs  Cargo.toml  Lazy.rs  Mutable.rs  Native.rs  Option.rs  README.md  RcHelpers.rs
src/fable-library-rust/fable/: Array.fs  Fable.Library.fsproj  List.fs  Option.fs  Util.fs
src/fable-library-rust/src/: Array.fs  Async.rs  BigInt.rs  BitConverter.rs  Char.rs  Choice.fs  Convert.rs  DateOnly.rs  DateTime.rs  DateTimeOffset.rs  Decimal.rs  Encoding.rs  Enumerable.rs  Environment.rs  Event.rs  Exception.rs  FSharp.Collections.fs  FSharp.Control.fs  FSharp.Core.fs  Fable.Library.Rust.fsproj  Fable.Library.fsproj  File.rs  Float.rs  Format.rs  Func.rs  FuncType.rs  Global.fs  Guid.rs  HashMap.rs  HashSet.rs  Interfaces.fs  Interop.rs  Lazy.rs  List.fs  List2.rs  LrcPtr.rs  Map.fs  Mutable.rs  Native.rs  NativeArray.rs  (+28 more)
src/fable-standalone/test/bench-compiler/: Cargo.toml  Platform.fs  ProjectParser.fs  app.fs  bench-compiler.fsproj  bench-compiler.sln  global.json  nuget.config  package.json  platform.fs  platform_.fs  rd.xml  splitter.config.js  transform.js  tsconfig.json  util.js
src/fable-standalone/test/bench-compiler/src/: Platform.fs  ProjectParser.fs  app.fs  bench-compiler.fsproj  main.mjs  rd.xml
tests/Rust/: Cargo.toml  Fable.Tests.Rust.fsproj
tests/Rust/src/: main.fs
tests/Rust/tests/: AnonRecordTests.fs  ArithmeticTests.fs  ArrayTests.fs  ClassInterfaceTests.fs  ClassTests.fs  ClosureTests.fs  ControlFlowTests.fs  ListTests.fs  NBodyTests.fs  OptionTests.fs  RecordTests.fs  StringTests.fs  TestArithmetic.fs  TestArray.fs  TestControlFlow.fs  TupleTests.fs  UnionTests.fs
tests/Rust/tests/common/: Aether.fs  Imports.fs  Interfaces.fs  Records.fs  Unions.fs  Util.fs  Util2.fs  Util3.fs
tests/Rust/tests/src/: AnonRecordTests.fs  ApplicativeTests.fs  ArithmeticTests.fs  ArrayTests.fs  AsyncTests.fs  ByRefTests.fs  CharTests.fs  ClassTests.fs  ClosureTests.fs  ComparisonTests.fs  ControlFlowTests.fs  ConvertTests.fs  CustomOperatorTests.fs  DateOnlyTests.fs  DateTimeOffsetTests.fs  DateTimeTests.fs  DictionaryTests.fs  ElmishParserTests.fs  EnumTests.fs  EnumerableTests.fs  EnvironmentTests.fs  EventTests.fs  ExtInteropTests.rs  GuidTests.fs  HashSetTests.fs  ImportTests.fs  InlineIfLambdaTests.fs  InterfaceTests.fs  InteropTests.fs  ListTests.fs  MapTests.fs  MeasureTests.fs  MiscTests.fs  MiscTests2.fs  NBodyTests.fs  NullnessTests.fs  ObservableTests.fs  OptionTests.fs  QueueTests.fs  QuotationTests.fs  (+27 more)
(+3271 files in other folders)
