[project]
name = "Fable"
version = "4.3.0"
description = "Fable"
authors = [
    { name = "Alfonso Garcia-Caro" },
    { name = "Dag Brattli", email = "dag@brattli.net" },
]
requires-python = ">= 3.12, < 4.0"
readme = "README.md"
license = "MIT"
dependencies = ["python-dateutil>=2.9.0,<3"]

[project.urls]
Homepage = "https://fable.io"

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "ruff>=0.11.6,<0.12",
    "maturin>=1.8.3,<2",
    "dunamai>=1.23.1,<2",
    "pydantic>=2.11.7",
    "attrs>=25.3.0",
    "pyright>=1.1.403",
]

[tool.hatch.build.targets.sdist]
include = ["./temp/fable-library-py/fable_library"]

[tool.hatch.build.targets.wheel]
include = ["./temp/fable-library-py/fable_library"]

[tool.hatch.build.targets.wheel.sources]
"./temp/fable-library-py/fable_library" = "temp/fable-library-py/fable_library"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
reportMissingTypeStubs = false
reportMissingImports = false
reportUnnecessaryTypeIgnoreComment = true
reportUnusedImport = true
reportUnusedVariable = true
reportUnnecessaryIsInstance = true
reportUnnecessaryComparison = true
reportUnnecessaryCast = true
reportPrivateUsage = true
reportImportCycles = true
reportDuplicateImport = true
reportConstantRedefinition = true
reportOverlappingOverload = true
reportInconsistentConstructor = true
reportImplicitStringConcatenation = true
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.ruff]
# Keep in sync with .pre-commit-config.yaml
line-length = 120
lint.ignore = []
lint.select = ["E", "W",  "F", "I", "T", "RUF", "TID", "UP"]
target-version = "py312"
include =["*.py"]

[tool.ruff.lint.flake8-bugbear]
# These Rust extension module types are immutable (frozen)
extend-immutable-calls = [
    "fable_modules.fable_library.types.int8",
    "fable_modules.fable_library.types.int16",
    "fable_modules.fable_library.types.int32",
    "fable_modules.fable_library.types.int64",
    "fable_modules.fable_library.types.uint8",
    "fable_modules.fable_library.types.uint16",
    "fable_modules.fable_library.types.uint32",
    "fable_modules.fable_library.types.uint64",
    "fable_modules.fable_library.types.float32",
    "fable_modules.fable_library.types.float64",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["temp/tests/Python", "."]
testpaths = [
    "temp/tests/Python",
]
