[package]
name = "fable-library-core"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/fable-compiler/fable"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module", "chrono"] }
byteorder = "1.5.0"
chrono = "0.4.45"
regex = "1.12.4"

[features]
# must be enabled when building with `cargo build`, maturin enables this automatically
extension-module = ["pyo3/extension-module"]

# Release profile tuned for the extension module. maturin builds with `--release`,
# so it honors these settings. opt-level defaults to 3 for release; do NOT set
# `panic = "abort"` — PyO3 relies on unwinding to convert boundary panics into a
# Python `PanicException` rather than aborting the interpreter process.
[profile.release]
lto = "fat"
codegen-units = 1
strip = true
