[package]
name = "fable_tests_rust"
version = "0.1.0"
edition = "2021"

[features]
no_std = ["fable_library_rust/no_std"]
static_do_bindings = ["fable_library_rust/static_do_bindings"]
threaded = ["fable_library_rust/threaded"]
# default = ["threaded"] # Uncomment when attempting to debug/use rust analyzer to switch to threaded mode

[dependencies]
fable_library_rust = { path = "./fable_modules/fable-library-rust" }
