[package]
name = "fable_tests_rust"
version = "0.1.0"
edition = "2021"

[features]
no_std = ["fable_library_rust/no_std"]
static_do_bindings = ["fable_library_rust/static_do_bindings"]
threaded = ["fable_library_rust/threaded"]
# default = ["no_std"] # Uncomment to default to "no_std" mode
# default = ["threaded"] # Uncomment to default to "threaded" mode

[dependencies]
fable_library_rust = { path = "./fable_modules/fable-library-rust" }
